fix: rota ajustada
